# notes_bot

./: .env_setup  .gitignore  Dockerfile  README.md  compose.yml  main.py  pyproject.toml  requirements.txt
